--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
+      html { scroll-behavior: smooth; scroll-padding-top: 100px; }
       body { font-family: 'Inter', sans-serif; background-color: #000; color: white; overflow-x: hidden; }
       /* Custom Scrollbar */
       ::-webkit-scrollbar { width: 8px; }
